--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -r dotenv/config app.js"
+    "start": "nodemon -r dotenv/config ./*"
   },
   "repository": {
     "type": "git",
