--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
   },
   "rules": {
     "no-console": "off",
-    "prefer-const": "warn"
+    "prefer-const": "warn",
+    "no-underscore-dangle": "off"
   }
 }
